partial/force-app/main/default/objects/Offer__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF( Opportunity__r.Account.PersonContact.IsPersonAccount = True, Opportunity__r.Account.FirstName + &quot; &quot;+ Opportunity__r.Account.LastName,  Opportunity__r.Account.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>