partial/force-app/main/default/objects/Offer__c/fields/Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Name__c</fullName>
    <formula>Opportunity__r.Owner.FirstName + &quot; &quot; +  Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisor Name</label>
    <type>Text</type>
</CustomField>