partial/force-app/main/default/objects/Offer__c/fields/Offer_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Offer Date</label>
    <type>Date</type>
</CustomField>