partial/force-app/main/default/objects/Offer__c/fields/Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Offer_Price__c</fullName>
    <label>Offer Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>