partial/force-app/main/default/objects/Offer__c/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offer</fullName>
                <default>true</default>
                <label>Offer</label>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Rejected Offer</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
            <value>
                <fullName>Accepted Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>