partial/force-app/main/default/objects/Offer__c/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local Purchase</fullName>
            </value>
            <value>
                <fullName>Local Rental</fullName>
            </value>
            <value>
                <fullName>Oversea Purchase</fullName>
            </value>
            <value>
                <fullName>Oversea Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>