partial/force-app/main/default/objects/Offer__c/fields/Project_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Unit_Type__c</fullName>
    <formula>Unit__r.Project_Unit_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Unit Type</label>
    <type>Text</type>
</CustomField>