partial/force-app/main/default/objects/Offer__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>Project_Name__r.Project_Address__Street__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>