partial/force-app/main/default/objects/Offer__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>