partial/force-app/main/default/objects/Offer__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Unit Project name must match Offer Project Name. Unit must also be available.</errorMessage>
        <filterItems>
            <field>Unit__c.Project_Unit_Type__r.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project_Name__c</valueField>
        </filterItems>
        <filterItems>
            <field>Unit__c.Unit_Availability__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>