partial/force-app/main/default/objects/Offer__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <formula>Unit__r.Unit_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Type</label>
    <type>Text</type>
</CustomField>