partial/force-app/main/default/objects/Offer__c/recordTypes/Record_Offer.recordType-meta.xml
<RecordType>
    <fullName>Record_Offer</fullName>
    <active>true</active>
    <label>Record_Offer</label>
</RecordType>