partial/force-app/main/default/objects/Offer__c/validationRules/Check_Offer_Type_Local.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Offer_Type_Local</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Project_Name__r.Country__c, &quot;Singapore&quot;),
OR (ISPICKVAL(Offer_Type__c, &quot;Oversea Purchase&quot;), ISPICKVAL(Offer_Type__c, &quot;Oversea Rental&quot;)))</errorConditionFormula>
    <errorMessage>Offer Type must be Local</errorMessage>
</ValidationRule>