partial/force-app/main/default/objects/Offer__c/validationRules/Check_Offer_Type_Oversea.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Offer_Type_Oversea</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Project_Name__r.Country__c, &quot;Singapore&quot;)),
OR (ISPICKVAL(Offer_Type__c, &quot;Local Purchase&quot;), ISPICKVAL(Offer_Type__c, &quot;Local Rental&quot;)))</errorConditionFormula>
    <errorMessage>Offer Type must be Oversea</errorMessage>
</ValidationRule>