partial/force-app/main/default/objects/Offer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Unit__c</columns>
    <columns>Offer_Price__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Offer_Date__c</columns>
    <columns>Offer_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>